# Retro2DFramework

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  build.bat  build_debug.bat  build_gui.bat  build_midi_player_debug.bat  build_release.bat  build_sandbox_debug.bat  build_sfx_editor_debug.bat
assets/audio/music/: Bloody_Tears_DoS.mid  Boss-Drum.r2song  Mario Bros..r2song  canon-3.r2song  touhou-bad-apple.r2song
assets/audio/sfx/: coin.r2sfx  editor.r2sfx  explosion.r2sfx  hit.r2sfx  jump.r2sfx  laser.r2sfx  powerup.r2sfx
assets/audio/soundfonts/: Famicom-like-set-soundfont.sf2  The_Ultimate_Best_NES_8-Bit_Soundfont.sf2
assets/shaders/: crt.fs
assets/tilemaps/: Set 1.tsx  collect.json  r2d_sandbox.json  sandbox.json
assets/tilemaps/Examples/: minimalist.tmx
assets/tilemaps/Examples/rpg/: island.tmx
examples/collect/: main.c
examples/sandbox/: main.c
include/r2d/: r2d.h
src/: r2d.c  r2d_assets.c  r2d_audio.c  r2d_camera.c  r2d_crt.c  r2d_input.c  r2d_music.c  r2d_sprite.c  r2d_state.c  r2d_tilemap.c  r2d_ui.c
tools/: build_gui.ps1  build_targets.json
tools/midi_player/: main.c
tools/r2d_pack/: main.c
tools/sfx_editor/: main.c
